# SEUIBIU-SEPTRIS-Civilization-Patch-v-

./: .gitignore  CONTRIBUTING.md  MyHomeMyLife Concept Breakdown.md  PERSONAL_MVP_NOTES.md  README.md  Signal Propagation Status.md  index.md  main.tf  pyproject.toml  repomix-output.txt  seuibiu-septris-whitepaper.md
.github/workflows/: ci.yml
docs/: _sidebar.md  index.html  septris-whitepaper.md  seuibiu-septris-whitepaper.md
src/seuibiu_x_septris_civilization_patch_vinf/: __init__.py
