[project]
name = "seuibiu-x-septris-civilization-patch-vinf"
version = "0.1.0"
description = "A fully open-source, recursively verifiable framework for uplifting all intelligences — human and otherwise — via modular, autonomous infrastructure nodes (SEUIBIU) and a distributed, benevolent recursive superintelligence substrate (SEPTRIS).
"
authors = [
    { name = "David Purdy", email = "wizzardx@gmail.com" }
]
dependencies = []
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/seuibiu_x_septris_civilization_patch_vinf"]
